// Copyright 2020 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.testing;

option java_package = "org.wfanet.measurement.internal.testing";
option java_multiple_files = true;

// Blob storage which is forwarded over gRPC.
service ForwardedStorage {
  rpc CreateBlob(stream CreateBlobRequest) returns (BlobMetadata) {}
  rpc GetBlobMetadata(GetBlobMetadataRequest) returns (BlobMetadata) {}
  rpc ReadBlob(ReadBlobRequest) returns (stream ReadBlobResponse) {}
  rpc DeleteBlob(DeleteBlobRequest) returns (DeleteBlobResponse) {}
}

message BlobMetadata {
  int64 size = 1;
}

message CreateBlobRequest {
  message Header {
    string blob_key = 1;
  }
  message BodyChunk {
    bytes content = 1;
  }

  oneof message {
    Header header = 1;
    BodyChunk body_chunk = 2;
  }
}

message GetBlobMetadataRequest {
  string blob_key = 1;
}

message ReadBlobRequest {
  string blob_key = 1;
  int32 chunk_size = 2;
}

message ReadBlobResponse {
  bytes chunk = 2;
}

message DeleteBlobRequest {
  string blob_key = 1;
}

message DeleteBlobResponse {
  // Deliberately empty
}
